--- a/app/dns/Dockerfile
+++ b/app/dns/Dockerfile
@@ -2,8 +2,8 @@ FROM wener/app
 
 
 # add repo.wener.me to install newer version
-RUN (cd /etc/apk/keys;curl -sLO https://repo.wener.me/alpine/wenermail@gmail.com-5dc8c7cd.rsa.pub ) && \
-    echo https://repo.wener.me/alpine/v$ALPINE_VERSION/community >> /etc/apk/repositories
+# RUN (cd /etc/apk/keys;curl -sLO https://repo.wener.me/alpine/wenermail@gmail.com-5dc8c7cd.rsa.pub ) && \
+#     echo https://repo.wener.me/alpine/v$ALPINE_VERSION/community >> /etc/apk/repositories
 
 RUN apk add --no-cache \
     # server
