--- a/xvfb/Makefile
+++ b/xvfb/Makefile
@@ -1,2 +1,5 @@
-build:
-	VERSION=3.17 docker buildx bake --push
+push:
+	docker buildx bake --push
+tags:
+	VERSION=3.18.0 $(MAKE) push
+	VERSION=3.18 $(MAKE) push
