--- a/base/openrc/Dockerfile
+++ b/base/openrc/Dockerfile
@@ -1,5 +1,5 @@
-ARG RELEASE_VERSION
-FROM wener/base:${RELEASE_VERSION}
+ARG ALPINE_RELEASE
+FROM wener/base:${ALPINE_RELEASE}
 
 # https://github.com/dockage/alpine/blob/master/3.10/openrc/Dockerfile
 RUN apk add --no-cache openrc su-exec ca-certificates wait4ports \
