--- a/base/Makefile
+++ b/base/Makefile
@@ -1,10 +1,13 @@
 #REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
 #-include $(REPO_ROOT)/build.mk
 
-RELEASE_VERSION ?= $(shell curl -sf https://alpinelinux.org/releases.json | jq '.release_branches[1].releases[0].version' -r)
-export RELEASE_VERSION
+ALPINE_RELEASE ?= $(shell curl -sf https://alpinelinux.org/releases.json | jq '.release_branches[1].releases[0].version' -r)
+export ALPINE_RELEASE
 
-build:
+print:
+	docker buildx bake --print
+
+push:
 	docker buildx bake --push
 
 
