1. templates add woodpecker demo 2. upgrade gitea runner 3. improve xvfb & chromium

--- a/gitea-runner/Makefile
+++ b/gitea-runner/Makefile
@@ -1,5 +1,11 @@
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
+
+export VERSION=0.2.5
+export ALPINE_VERSION=3.18
+
 push:
-	VERSION=3.18 docker buildx bake --push
+	docker buildx bake --push
 
 print:
 	docker buildx bake --print
