--- a/nginx/Makefile
+++ b/nginx/Makefile
@@ -1,3 +1,7 @@
+VERSION ?= $(shell docker run --rm -it wener/base sh -c 'apk update >/dev/null;apk policy nginx | sed "2!d"  | sed -r "s/^\s*([0-9.]+).*/\1/"')
+export VERSION
 
-build:
-	docker buildx bake --push
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
+
+export ALPINE_RELEASE
