--- a/bun/bun/Dockerfile
+++ b/bun/bun/Dockerfile
@@ -1,13 +1,24 @@
-FROM wener/base as builder
-
 ARG BUN_VERSION
 
-RUN mkdir -p /tmp && cd /tmp && \
-    curl -LO https://ghproxy.com/https://github.com/oven-sh/bun/releases/download/bun-v${BUN_VERSION}/bun-linux-x64.zip && \
-    unzip bun-linux-x64.zip && \
-    mkdir /out && \
-    mv bun-linux-x64/bun /out
+FROM oven/bun:${BUN_VERSION}-alpine as builder
 
-FROM wener/debian
+# glibc 需要从源码构建才能用
+# https://github.com/sgerrand/alpine-pkg-glibc/issues/176
+# https://github.com/sgerrand/alpine-pkg-glibc
+# https://github.com/oven-sh/bun/blob/main/dockerhub/alpine/Dockerfile
 
-COPY --from=builder /out/bun /usr/local/bin/bun
+FROM wener/base
+
+COPY --from=builder /usr/local/bin/bun /usr/local/bin/bun
+
+ARG GLIBC_VERSION=2.34-r0
+RUN set -ex \
+    && cd /tmp  \
+    && curl --remote-name-all -sfL https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}/glibc{,-bin,-dev,-i18n}-${GLIBC_VERSION}.apk \
+    && apk del gcompat  \
+    && apk add glibc{,-bin,-dev,-i18n}-${GLIBC_VERSION}.apk --no-cache --force-overwrite --allow-untrusted  \
+    && rm -rf /tmp/* \
+    && ln -s /usr/local/bin/bun /usr/local/bin/bunx \
+    && which bun \
+    && which bunx \
+    && bun --version
