--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,17 @@
 {
-  "_": "https://github.com/google/gts/blob/master/tsconfig-google.json",
   "compilerOptions": {
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "declaration": true,
-    "forceConsistentCasingInFileNames": true,
     "lib": [
       "esnext"
     ],
-    "allowJs": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "module": "commonjs",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "pretty": true,
-    "sourceMap": true,
-    "skipLibCheck": true,
     "strict": true,
-    "target": "es2018"
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "NodeNext"
   },
   "include": [
-    "scripts"
+    "src"
   ],
   "exclude": [
-    "node_modules",
-    ".yarn"
+    "node_modules"
   ]
 }
