add juicefs, update mihomo, php8.3

--- a/mihomo/compatible/Dockerfile
+++ b/mihomo/compatible/Dockerfile
@@ -9,8 +9,10 @@ RUN --mount=type=cache,target=/tmp \
     && curl -sfLOC- https://github.com/MetaCubeX/mihomo/releases/download/v${VERSION}/mihomo-linux-${TARGETARCH}-compatible-v${VERSION}.gz \
     && apk add 7zip \
     && setup-timezone Asia/Shanghai \
-    && 7z x mihomo-linux-${TARGETARCH}-compatible-*.gz \
-    && mv mihomo-linux-${TARGETARCH}-compatible /usr/bin/mihomo \
+    && 7z x mihomo-linux-${TARGETARCH}-compatible-v${VERSION}.gz \
+    && ls mihomo-linux-${TARGETARCH}* \
+    && [ ! -e mihomo-linux-${TARGETARCH}-compatible ] || mv mihomo-linux-${TARGETARCH}-compatible /usr/bin/mihomo \
+    && [ ! -e mihomo-linux-${TARGETARCH}-compatible-v${VERSION} ] || mv mihomo-linux-${TARGETARCH}-compatible-v${VERSION} /usr/bin/mihomo \
     && chmod +x /usr/bin/mihomo \
     && mihomo -v
 
