--- a/php/Makefile
+++ b/php/Makefile
@@ -1,6 +1,7 @@
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
 
-push:
-	docker buildx bake --push
+export ALPINE_RELEASE
 
 mod-prepare:
 	docker run -d -it --name php-builder wener/php:builder
