update gitea-runner & builder

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -1,4 +1,11 @@
-export VERSION=3.18
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
+
+VERSION:=$(ALPINE_RELEASE)
+export ALPINE_RELEASE
+export ALPINE_VERSION
+export VERSION
+
 push:
 	docker buildx bake --push
 
