--- a/gitea-runner/gitea-runner/Dockerfile
+++ b/gitea-runner/gitea-runner/Dockerfile
@@ -1,7 +1,9 @@
 ARG VERSION
+ARG ALPINE_RELEASE
+
 FROM gitea/act_runner:$VERSION as builder
 
-FROM quay.io/wener/builder:3.18
+FROM wener/builder:${ALPINE_RELEASE}
 
 COPY --from=builder /usr/local/bin/act_runner /usr/local/bin/act_runner
 COPY --from=builder /opt/act/run.sh /opt/act/run.sh
