--- a/gitea-runner/Makefile
+++ b/gitea-runner/Makefile
@@ -1,8 +1,10 @@
 REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
 -include $(REPO_ROOT)/build.mk
 
+# https://hub.docker.com/r/gitea/act_runner/tags
+# https://gitea.com/gitea/act_runner
 export VERSION=0.2.6
-export ALPINE_VERSION=3.18
+export ALPINE_RELEASE
 
 push:
 	docker buildx bake --push
