--- a/go/go/Dockerfile
+++ b/go/go/Dockerfile
@@ -1,4 +1,8 @@
-FROM  wener/base
+ARG ALPINE_RELEASE
+FROM wener/base:${ALPINE_RELEASE}
 
-RUN apk upgrade --no-cache -a && apk add --no-cache go musl-dev git make gcc pkgconf
+ARG TARGETARCH
+ARG TARGETVARIANT
+RUN --mount=type=cache,id=apk-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/etc/apk/cache \
+  apk add --no-cache go musl-dev git make gcc pkgconf
 RUN mkdir /root/go
