--- a/go/win/Dockerfile
+++ b/go/win/Dockerfile
@@ -1,2 +1,7 @@
-FROM wener/go
-RUN apk add --no-cache mingw-w64-gcc wine
+ARG VERSION
+ARG TARGETARCH
+ARG TARGETVARIANT
+
+FROM wener/go:$VERSION
+RUN --mount=type=cache,id=apk-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/etc/apk/cache \
+    apk add --no-cache mingw-w64-gcc wine
