--- a/node/node/Dockerfile
+++ b/node/node/Dockerfile
@@ -1,8 +1,11 @@
 # syntax=docker/dockerfile:1
 
-ARG ALPINE_VERSION
-FROM wener/base:${ALPINE_VERSION}
+ARG ALPINE_RELEASE
+FROM wener/base:${ALPINE_RELEASE}
 
-RUN apk add --no-cache nodejs npm make
+ARG TARGETARCH
+ARG TARGETVARIANT
+RUN --mount=type=cache,id=apk-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/etc/apk/cache \
+    apk add nodejs npm make
 RUN --mount=type=cache,target=/root/.npm/ \
     npm install -g npm pnpm yarn
