update caddy, php, frp, mihomo

--- a/caddy/Makefile
+++ b/caddy/Makefile
@@ -1,2 +1,10 @@
-push:
-	docker buildx bake --push
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
+
+export ALPINE_RELEASE
+export VERSION=2.8.4
+
+# check version
+# https://hub.docker.com/_/caddy
+# https://github.com/caddyserver/caddy/releases
+
