add icu-data-full to node

--- a/node/node/Dockerfile
+++ b/node/node/Dockerfile
@@ -5,7 +5,9 @@ FROM wener/base:${ALPINE_RELEASE}
 
 ARG TARGETARCH
 ARG TARGETVARIANT
+# add icu-data-full for `new TextDecoder('latin1')` to work
+#   avoid The "windows-1252" encoding is not supported
 RUN --mount=type=cache,id=apk-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/etc/apk/cache \
-    apk add nodejs npm make
+    apk add nodejs npm make icu-data-full
 RUN --mount=type=cache,target=/root/.npm/ \
     npm install -g npm pnpm yarn
