php 8+ use icu instead of the broken iconv

--- a/php/8.1/Dockerfile
+++ b/php/8.1/Dockerfile
@@ -1,6 +1,8 @@
 ARG ALPINE_RELEASE
 FROM wener/nginx:alpine-${ALPINE_RELEASE}
 
+RUN apk add icu-data-full # for replacing iconv
+
 # https://pkgs.alpinelinux.org/packages?name=php81-pecl-*&arch=x86_64
 RUN apk --no-cache add \
     php81 \
