--- a/ml/surya-ocr/Dockerfile
+++ b/ml/surya-ocr/Dockerfile
@@ -23,4 +23,5 @@ COPY preload.py /app
 
 COPY main.py /app
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${PORT:-3000}"]
+#CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${PORT:-3000}"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3000"]
