add wener/pytorch update templates gitea/act_runner 0.2.11 surya-ocr: use poetry, share pytorch base image

--- a/gitea-runner/gitea-runner/Dockerfile
+++ b/gitea-runner/gitea-runner/Dockerfile
@@ -1,7 +1,7 @@
 ARG VERSION
 ARG ALPINE_RELEASE
 
-FROM gitea/act_runner:$VERSION as builder
+FROM gitea/act_runner:$VERSION AS builder
 
 FROM wener/builder:${ALPINE_RELEASE}
 
