--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,19 @@
 root = true
 
 [*]
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+max_line_length = 120
+end_of_line = lf
 insert_final_newline = true
-indent_style = space
-indent_size = 2
+trim_trailing_whitespace = true
 
-[{Makefile,*.mk}]
-indent_style = tab
+indent_size = 2
+indent_style = space
+
+[{Makefile,*.mk,*.go}]
 indent_size = 4
+indent_style = tab
+
+[*.py]
+indent_size = 4
+indent_style = space
