--- a/ml/surya-ocr/Makefile
+++ b/ml/surya-ocr/Makefile
@@ -11,26 +11,29 @@ info:
 	@echo "Images: "
 	VERSION=$(VERSION) docker buildx bake --print | jq -r '.target.base.tags[]'
 dev:
-	uvicorn main:app --reload --host 0.0.0.0 --port $(PORT)
+	poetry run uvicorn main:app --reload --host 0.0.0.0 --port $(PORT)
 
+ifneq ("$(wildcard pyproject.toml)","")
+install:
+	poetry install
+outdated:
+	poetry show --outdated
+fmt:
+	poery run black .
+else ifneq ("$(wildcard requirements.txt)","")
+install:
+	pip install -r requirements.txt
 freeze:
 	pip freeze > requirements.txt
-
 outdated:
 	pip list --outdated
-
-up:
-	pip install tabled-pdf surya-ocr --upgrade
-
-fmt:
-	python3 -m black main.py
-
-push:
-	VERSION=$(VERSION) docker buildx bake --push
-
 setup:
 	python3 -m venv venv
 	. venv/bin/activate && pip install -r requirements.txt
+endif
+
+push:
+	VERSION=$(VERSION) docker buildx bake --push
 
 docker-clean:
 	-docker rmi quay.io/wener/surya-ocr
