update caddy; base builder

--- a/base/Makefile
+++ b/base/Makefile
@@ -1,14 +1,14 @@
-#REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
-#-include $(REPO_ROOT)/build.mk
+REPO_ROOT ?= $(shell git rev-parse --show-toplevel)
+-include $(REPO_ROOT)/build.mk
 
-ALPINE_RELEASE ?= $(shell curl -sf https://alpinelinux.org/releases.json | jq '.release_branches[1].releases[0].version' -r)
+#ALPINE_RELEASE ?= $(shell curl -sf https://alpinelinux.org/releases.json | jq '.release_branches[1].releases[0].version' -r)
 export ALPINE_RELEASE
 
-print:
-	docker buildx bake --print
-
-push:
-	docker buildx bake --push
+#print:
+#	docker buildx bake --print
+#
+#push:
+#	docker buildx bake --push
 
 
 #build: base openrc app
